re-design login.html

--- a/client/app/account/login/login.less
+++ b/client/app/account/login/login.less
@@ -23,3 +23,7 @@
 .btn-github {
   .button-variant(@btnTextAlt; @btnGithubBackground; @btnGithubBackgroundHighlight);
 }
+
+.padding-top {
+    padding-top: 150px;
+}
