working linkedin connection component

--- a/client/app/app.less
+++ b/client/app/app.less
@@ -17,6 +17,7 @@
 
 // injector
 @import 'account/login/login.less';
+@import 'account/settings/settings.less';
 @import 'admin/admin.less';
 @import 'main/main.less';
 // endinjector
