--- a/client/app/account/settings/settings.less
+++ b/client/app/account/settings/settings.less
@@ -5,3 +5,24 @@
 .margin-top-50 {
     margin-top: 50px;
 }
+
+.btn-provider {
+    display: inline-block;
+    width: 135px;
+}
+
+.margin-top-10 {
+    margin-top: 10px;
+}
+
+.margin-top-30 {
+    margin-top: 30px;
+}
+
+.margin-left-10 {
+    margin-left: 10px;
+}
+
+.margin-bottom-30 {
+    margin-bottom: 30px;
+}
