TERN-3 create menus in navbar
1. remove unnecesary files (admin, signup)
2. add menus (job, contrib, course, language)

--- a/client/app/app.less
+++ b/client/app/app.less
@@ -17,7 +17,6 @@
 
 // injector
 @import 'account/login/login.less';
-@import 'account/settings/settings.less';
-@import 'admin/admin.less';
+@import 'account/setting/setting.less';
 @import 'main/main.less';
 // endinjector
