change menu name setting-> profile

--- a/client/app/app.less
+++ b/client/app/app.less
@@ -17,6 +17,6 @@
 
 // injector
 @import 'account/login/login.less';
-@import 'account/setting/setting.less';
+@import 'account/profile/profile.less';
 @import 'main/main.less';
 // endinjector
