--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -12,13 +12,13 @@
     <div collapse="isCollapsed" class="navbar-collapse collapse" id="navbar-main">
       <ul class="nav navbar-nav">
         <li ng-repeat="item in menu" ng-class="{active: isActive(item.link)}">
-            <a ng-href="{{item.link}}">{{item.title}}</a>
+            <a ng-show="isLoggedIn()" ng-href="{{item.link}}">{{item.title}}</a>
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li ng-hide="isLoggedIn()" ng-class="{active: isActive('/login')}"><a href="/login">Login</a></li>
         <li ng-show="isLoggedIn()"><p class="navbar-text">Welcome, {{ getCurrentUser().name }}</p> </li>
-        <li ng-show="isLoggedIn()" ng-class="{active: isActive('/setting')}"> <a href="/setting">Setting </a></li>
+        <li ng-show="isLoggedIn()" ng-class="{active: isActive('/profile')}"> <a href="/profile">Profile</a></li>
         <li ng-show="isLoggedIn()" ng-class="{active: isActive('/logout')}"><a href="" ng-click="logout()">Logout</a></li>
       </ul>
     </div>
