TERN-17 add nav font, avatar
add navbar brand, menu font: Open Sans
add avatar

--- a/client/app/app.less
+++ b/client/app/app.less
@@ -15,8 +15,16 @@
     padding: 0.2em 0;
 }
 
+@media (min-width: 1200px) {
+    .container {
+	width: 970px;		
+    }
+}
+
 // injector
 @import 'account/login/login.less';
 @import 'account/profile/profile.less';
 @import 'main/main.less';
+@import 'main/public.less';
+@import 'navbar/navbar.less';
 // endinjector
