--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="/" class="navbar-brand">Building</a>
+      <a href="/" class="navbar-brand">Rebot.io</a>
     </div>
     <div collapse="isCollapsed" class="navbar-collapse collapse" id="navbar-main">
       <ul class="nav navbar-nav">
@@ -17,8 +17,17 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li ng-hide="isLoggedIn()" ng-class="{active: isActive('/login')}"><a href="/login">Login</a></li>
-        <li ng-show="isLoggedIn()"><p class="navbar-text">Welcome, {{ getCurrentUser().name }}</p> </li>
-        <li ng-show="isLoggedIn()" ng-class="{active: isActive('/profile')}"> <a href="/profile">Profile</a></li>
+        <li class="hidden-xs hidden-sm" ng-show="isLoggedIn()">
+	    <a class="nav-avatar-menu" href="/profile">
+		<img class="nav-avatar-img" src="{{ getCurrentUser().github.avatar_url }}" width="35px" width="35px" />
+	    </a>
+	</li>
+        <li ng-show="isLoggedIn()">
+	    <a href="/profile">
+		<span class="hidden-xs hidden-sm">{{ getCurrentUser().name }}</span>
+		<span class="hidden-md hidden-lg">Profile</span>
+	    </a>
+	</li>
         <li ng-show="isLoggedIn()" ng-class="{active: isActive('/logout')}"><a href="" ng-click="logout()">Logout</a></li>
       </ul>
     </div>
