--- a/client/app/app.less
+++ b/client/app/app.less
@@ -15,15 +15,17 @@
     padding: 0.2em 0;
 }
 
-@media (min-width: 1200px) {
-    .container {
-	width: 970px;		
-    }
-}
+
+// @media (min-width: 1200px) {
+//     .container {
+// 	width: 970px;		
+//     }
+// }
 
 // injector
 @import 'account/login/login.less';
 @import 'account/profile/profile.less';
+@import 'main/loggedin.less';
 @import 'main/main.less';
 @import 'main/public.less';
 @import 'navbar/navbar.less';
