change app background, nav color

--- a/client/app/app.less
+++ b/client/app/app.less
@@ -8,6 +8,15 @@
  * App-wide Styles
  */
 
+.md-toolbar-tools > h3 {
+    font-family: 'Ubuntu', sans-serif;
+}
+
+.app {
+    background-color: #ededed;
+    padding-bottom: 45px;
+}
+
 .browsehappy {
     margin: 0.2em 0;
     background: #ccc;
