--- a/client/app/main/loggedin.less
+++ b/client/app/main/loggedin.less
@@ -1,12 +1,10 @@
 
-@yellow: #FFFF4F;
-
-.yellow {
-    background-color: @yellow
-}
-
 .leader-card {
     width: 400px;
+}
+
+.md-card {
+    background-color: #ffffff;
 }
 
 .avatar {
