--- a/client/components/navbar/navbar.less
+++ b/client/components/navbar/navbar.less
@@ -1,18 +1,23 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans);
 @import url(http://fonts.googleapis.com/css?family=Ubuntu);
 
-.navbar {
+.navbar-rebot {
     min-height: 80px;
     padding-top: 15px;
+    background-color: #ffffff;
+    box-shadow: 0px 2px 5px 0 rgba(0, 0, 0, 0.26);
 }
 
 .navbar-brand {
     font-family: 'Open Sans', sans-serif;
-    font-size: 28px;
+    font-size: 32px;
+    margin-right: 20px;
 }
 
 .nav > li > a {
     font-family: 'Ubuntu', sans-serif;
+    font-size: 18px;
+    color: #000000;
 }
 
 
@@ -25,4 +30,5 @@
     border-radius: 25px;
     -webkit-border-radius: 25px;
     -moz-border-radius: 25px;
+    border: 1px solid #ddd;
 }
