--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-default navbar-static-top" ng-controller="NavbarCtrl">
+<div class="navbar navbar-rebot navbar-static-top" ng-controller="NavbarCtrl">
   <div class="container">
     <div class="navbar-header">
       <button class="navbar-toggle" type="button" ng-click="isCollapsed = !isCollapsed">
@@ -16,7 +16,7 @@
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li ng-hide="isLoggedIn()" ng-class="{active: isActive('/login')}"><a href="/login">Login</a></li>
+        <li ng-hide="isLoggedIn()" ng-class="{active: isActive('/login')}"><a href="/login">LOGIN</a></li>
         <li class="hidden-xs hidden-sm" ng-show="isLoggedIn()">
 	    <a class="nav-avatar-menu" href="/profile">
 		<img class="nav-avatar-img" src="{{ getCurrentUser().github.avatar_url }}" width="35px" width="35px" />
@@ -28,7 +28,7 @@
 		<span class="hidden-md hidden-lg">Profile</span>
 	    </a>
 	</li>
-        <li ng-show="isLoggedIn()" ng-class="{active: isActive('/logout')}"><a href="" ng-click="logout()">Logout</a></li>
+        <li ng-show="isLoggedIn()" ng-class="{active: isActive('/logout')}"><a href="" ng-click="logout()">LOGOUT</a></li>
       </ul>
     </div>
   </div>
