TERN-15 done: profile sidebar

--- a/client/app/app.less
+++ b/client/app/app.less
@@ -3,18 +3,28 @@
 
 @icon-font-path: '/bower_components/bootstrap/fonts/';
 @fa-font-path: '/bower_components/font-awesome/fonts';
+@md-font-path: '/bower_components/material-design-iconic-font/fonts';
 
 /**
  * App-wide Styles
  */
 
-.md-toolbar-tools > h3 {
+.md-toolbar-tools {
     font-family: 'Ubuntu', sans-serif;
+    padding-left: 10px;
+
+    h1 {
+    }
+
+    h3 {
+	font-size: 20px;
+	padding-left: 20px;
+    }
 }
 
 .app {
     background-color: #ededed;
-    padding-bottom: 45px;
+    padding-bottom: 85px;
 }
 
 .browsehappy {
