--- a/client/app/main/loggedin.less
+++ b/client/app/main/loggedin.less
@@ -12,5 +12,7 @@
     margin: 16px;
     margin-right:35px;
     border-radius: 48px;
+    -webkit-border-radius: 48px;
+    -moz-border-radius: 48px;
     border: 1px solid #ddd;
 }
