--- a/client/app/account/profile/profile.less
+++ b/client/app/account/profile/profile.less
@@ -1,3 +1,71 @@
+.sidebar-toggle {
+    margin: 15px;
+}
+
+
+.profile-sidebar-content {
+    margin: 25px 15px 15px 15px;
+    padding: 10px 10px 10px 10px;
+    background-color: #FFFFFF;
+    -moz-box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.9);
+    -webkit-box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.9);
+    box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.9);
+
+    md-item-content {
+	padding: 10px 0px 10px 10px;
+    }
+    
+    md-content {
+    	margin: 3px 10px 0px 20px;
+	font-family: 'Ubuntu', sans-serif;
+    }
+
+    .md-button {
+	width: 40px;
+	height: 40px;
+    }
+}
+
+.provider {
+    width: 110px;
+    padding: 10px 0px 10px 0px;
+    margin: 8px 6px 0px 6px;
+}
+
+.profile-sidebar-avatar {
+    margin-top: 30px;
+    width: 120px;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
+    -moz-box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.8);
+    -webkit-box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.8);
+    box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.8);
+}
+
+.profile-sidebar-name {
+    color: #efefef;
+    margin-top: 10px;
+    font-family: 'Ubuntu', sans-serif;
+}
+
+.sidebar {
+    height: 620px;
+    padding-top: 25px;
+    margin-bottom: 10px;
+}
+
+.md-sidenav-left {
+    background-color: #424a5d;
+    box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.6);
+    
+}
+
+md-sidenav, md-backdrop {
+    position: relative !important;
+}
+
+
 .margin-right-10 {
     margin-right: 10px;
 }
