TERN-15, TERN-21 profile-tab layout

--- a/client/app/account/profile/profile.less
+++ b/client/app/account/profile/profile.less
@@ -1,5 +1,38 @@
+
+.profile-content {
+    margin: 0px 40px 0px 40px;
+}
+
+md-tabs.profile-tab {
+    margin: 0px 10px 0px 0px;
+
+    md-tab {
+	font-size: 20px;
+	font-family: 'Ubuntu', sans-serif;
+	color: #BFBFBF;
+
+	&.active {
+    	    color: white;
+	}
+    }
+    .md-header {
+	height: 65px;
+    	background-color: #424A5D !important;
+    }
+
+    .md-header .md-ripple {
+    	border-color: #FFFF8D !important;
+    }
+    
+    md-tabs-ink-bar {
+    	background-color: #FFFF8D !important;
+    }
+}
+
 .sidebar-toggle {
-    margin: 15px;
+    md-button {
+	margin-bottom: 15px;
+    }
 }
 
 .profile-sidebar-content {
