--- a/client/app/app.less
+++ b/client/app/app.less
@@ -22,6 +22,12 @@
     }
 }
 
+.footer {
+    text-align: center;
+    padding: 30px 0;
+    margin-top: 70px;
+}
+
 .app {
     background-color: #ededed;
     padding-bottom: 85px;
