--- a/client/app/app.less
+++ b/client/app/app.less
@@ -8,6 +8,12 @@
 /**
  * App-wide Styles
  */
+@rebot-pink: #FF4081;
+@rebot-blue: #03A9F4;
+@rebot-yellow: #FFFF8D;
+@rebot-green: #1de9b6;
+@rebot-darkgreen: #00bfa5;
+@rebot-nav: #424A5D;
 
 .md-toolbar-tools {
     font-family: 'Ubuntu', sans-serif;
@@ -49,7 +55,10 @@
 
 // injector
 @import 'account/login/login.less';
+@import 'account/profile/github-tab.less';
 @import 'account/profile/profile.less';
+@import 'account/profile/sidebar.less';
+@import 'account/profile/tabs.less';
 @import 'main/loggedin.less';
 @import 'main/main.less';
 @import 'main/public.less';
