TERN-15 set lang chart color

--- a/client/app/account/profile/github-tab.less
+++ b/client/app/account/profile/github-tab.less
@@ -14,6 +14,7 @@
 
 	h1.rankTitle {
 	    font-family: 'Lato', sans-serif;
+	    margin-bottom: 30px;
 	}
 
 	h3 {
@@ -38,7 +39,9 @@
     }
 
     .language {
-	background-color: @rebot-blue;
+	#langChart {
+	    margin: 10px 0px 10px 0px;
+	}
     }
 
     .activity {
