--- a/client/app/app.less
+++ b/client/app/app.less
@@ -11,9 +11,12 @@
 @rebot-pink: #FF4081;
 @rebot-blue: #03A9F4;
 @rebot-yellow: #FFFF8D;
+@rebot-darkyellow: #FFEA00;
 @rebot-green: #1de9b6;
 @rebot-darkgreen: #00bfa5;
 @rebot-nav: #424A5D;
+@rebot-orange: #FF5722;
+@rebot-lightorange: #FF3D00;
 
 .md-toolbar-tools {
     font-family: 'Ubuntu', sans-serif;
@@ -58,6 +61,7 @@
 @import 'account/profile/github-tab.less';
 @import 'account/profile/profile.less';
 @import 'account/profile/sidebar.less';
+@import 'account/profile/tab.less';
 @import 'account/profile/tabs.less';
 @import 'main/loggedin.less';
 @import 'main/main.less';
