--- a/client/app/account/profile/github-tab.less
+++ b/client/app/account/profile/github-tab.less
@@ -1,5 +1,6 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:800italic,800);
 @import url(http://fonts.googleapis.com/css?family=Lato:300);		
+
 .github-tab {
 
     font-family: 'Ubuntu', sans-serif;
@@ -39,12 +40,42 @@
     }
 
     .language {
-	#langChart {
-	    margin: 10px 0px 10px 0px;
+	@media all and (max-width: 960px) {
+	    #lang-chart {
+		margin: 100px 0px 70px 0px;
+	    }
+	}
+
+	@media all and (min-width: 960px) {
+	    #lang-chart {
+		padding: 50px 0px 10px 0px;
+		margin-right: 55px;
+	    }
 	}
     }
 
     .activity {
-	background-color: @rebot-green;
+
+	#activity-chart {
+	    .c3-chart-text {
+		font-family: 'Ubuntu', sans-serif;
+	    }
+	    
+	    .c3-line {
+		stroke-width: 2px;
+	    }
+	}
+	
+	@media all and (max-width: 960px) {
+	    #activity-chart {
+		margin-top: 100px;
+	    }
+	}
+
+	@media all and (min-width: 960px) {
+	    #activity-chart {
+		margin-right: 55px;
+	    }
+	}
     }
 }
