TERN-24 course tab done

--- a/client/app/account/profile/github-tab.less
+++ b/client/app/account/profile/github-tab.less
@@ -1,21 +1,19 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:800italic,800);
-@import url(http://fonts.googleapis.com/css?family=Lato:300);		
-
-.github-tab {
+.github-grid {
 
     font-family: 'Ubuntu', sans-serif;
 
     .ranking {
 
-	h1.rankIndex {
+	h1.rank-index {
 	    font-family: 'Open Sans', sans-serif;
 	    font-size: 100px;
-	    margin: 10px 0px 20px 0px;
+	    margin: 15px 0px 25px 0px;
 	}
 
-	h1.rankTitle {
-	    font-family: 'Lato', sans-serif;
-	    margin-bottom: 30px;
+	p.rank-title {
+	    font-family: 'Raleway', sans-serif;
+	    font-size: 35px;
+	    margin-bottom: 15px;
 	}
 
 	h3 {
