TERN-31 done: language design

--- a/client/app/app.less
+++ b/client/app/app.less
@@ -27,6 +27,7 @@
 @rebot-orange: #FF5722;
 @rebot-lightorange: #FF3D00;
 @rebot-gray: #0f0f0f;
+@rebot-lightgray: #78909C;
 
 @import url(http://fonts.googleapis.com/css?family=Raleway);
 @import url(http://fonts.googleapis.com/css?family=Lato:300,400);
@@ -78,6 +79,7 @@
 @import 'account/profile/profile.less';
 @import 'account/profile/sidebar.less';
 @import 'account/profile/tabs.less';
+@import 'language/language.less';
 @import 'main/loggedin.less';
 @import 'main/main.less';
 @import 'main/public.less';
