--- a/client/app/app.less
+++ b/client/app/app.less
@@ -79,6 +79,7 @@
 @import 'account/profile/profile.less';
 @import 'account/profile/sidebar.less';
 @import 'account/profile/tabs.less';
+@import 'course/course.less';
 @import 'language/language.less';
 @import 'main/loggedin.less';
 @import 'main/main.less';
