--- a/client/app/main/loggedin.less
+++ b/client/app/main/loggedin.less
@@ -1,18 +1,150 @@
+.trend-leader-div {
 
-.leader-card {
-    width: 400px;
+    .avatar {
+	width: 48px;
+	margin: 16px 16px 0px 16px;
+	border-radius: 48px;
+	-webkit-border-radius: 48px;
+	-moz-border-radius: 48px;
+    }
+    
+    .toolbar-title {
+	margin: 20px 20px 0px 30px;
+	padding-bottom: 15px;
+	font-size: 25px;
+	font-family: 'Ubuntu', sans-serif;
+    }
+    
+    margin-top: 20px;
+    background-color: #FFFFFF;
+
+    .search-bar {
+	background-color: @rebot-nav;
+
+    }
+
+    @media all and (min-width: 600px) {
+	.course-select {
+	    margin: 20px 20px 0px 0px;
+	    padding-bottom: 15px;
+	    font-size: 22px;
+	    font-family: 'Ubuntu', sans-serif;
+	}
+    }
+
+    @media all and (max-width: 600px) {
+	.course-select {
+	    margin: 20px 20px 0px 0px;
+	    padding-bottom: 15px;
+	    font-size: 17px;
+	    font-family: 'Ubuntu', sans-serif;
+
+	}
+    }
+
+    .repo-list {
+	.repo-item {
+	    border-top: 1px solid;
+	    border-top-color: rgba(0,0,0,0.12);
+	    padding: 10px 20px 10px 20px;
+
+	    @media all and (max-width: 600px) {
+		.md-fab {
+		    margin: 10px 5px 0px 5px;
+		    border-radius: 30%;
+		    height: 35px;
+		    width: 35px;
+		}
+
+		.repo-desc {
+		    margin-left: 20px;
+		    margin-top: 10px;
+		}
+
+		.repo-name {
+		    font-size: 20px;
+		    margin-top: 20px;
+		    font-family: 'Open sans', sans-serif;
+		}
+
+		.repo-user {
+		    font-family: 'Ubuntu', sans-serif;
+		    font-size: 1px;
+		}
+	    }
+	    
+	    @media all and (min-width: 600px) {
+		.md-fab {
+		    margin: 10px 10px 0px 10px;
+		    border-radius: 30%;
+		    height: 45px;
+		    width: 45px;
+		}
+
+		.repo-desc {
+		    margin-left: 20px;
+		    margin-top: 10px;
+		}
+
+		.repo-name {
+		    font-size: 25px;
+		    font-family: 'Open sans', sans-serif;
+		    margin-top: 20px;
+		}
+
+		.repo-user {
+		    font-family: 'Ubuntu', sans-serif;
+		    font-size: 15px;
+		}
+
+		.repo-last-update {
+		    p {
+			font-family: 'Ubuntu', sans-serif;
+			font-size: 15px;
+			margin-top: 10px;
+			margin-bottom: 0px;
+		    }
+		    span {
+			padding-top: 10px;
+			font-size: 20px;
+			font-family: 'Lato', sans-serif;
+		    }
+		}
+	    }
+
+	    h3.count {
+		font-family: 'Ubuntu', sans-serif;
+		margin-bottom: 0px;
+		margin-top: 7px;
+	    }
+
+	    .active-button {
+		background-color: #00C853;
+		&:not([disabled]):hover, &:not([disabled]):focus {
+					     background-color: #2E7D32;
+	        }
+	    }
+
+	    .influential-button {
+		background-color: @rebot-blue;
+		&:not([disabled]):hover, &:not([disabled]):focus {                                      background-color: #1565C0;
+	        }
+	    }
+
+	    .github-button {
+		background-color: #ff5722;
+		&:not([disabled]):hover, &:not([disabled]):focus {                                      background-color: #E64A19;
+	        }
+	    }
+	}
+    }
 }
 
-.md-card {
-    background-color: #ffffff;
+md-select.md-default-theme .md-select-label {
+    border-bottom-color: rgba(255, 255, 255, 0.6);
 }
 
-.avatar {
-    width: 48px;
-    margin: 16px;
-    margin-right:35px;
-    border-radius: 48px;
-    -webkit-border-radius: 48px;
-    -moz-border-radius: 48px;
-    border: 1px solid #ddd;
+md-select.md-default-theme:not([disabled]):focus .md-select-label {
+    border-bottom-color: rgba(255, 255, 255, 0.6);
+    color: #FFFFFF;
 }
