login, landing page done

--- a/client/app/account/login/login.less
+++ b/client/app/account/login/login.less
@@ -15,16 +15,16 @@
 // --------------------------------------------------
 
 .btn-facebook {
-  .button-variant(@btnText; @btnFacebookBackgroundHighlight; @btnFacebookBackgroundHighlight);
+    .button-variant(@btnText; @btnFacebookBackgroundHighlight; @btnFacebookBackgroundHighlight);
 }
 .btn-google-plus {
-  .button-variant(@btnText; @btnGooglePlusBackground; @btnGooglePlusBackgroundHighlight);
+    .button-variant(@btnText; @btnGooglePlusBackground; @btnGooglePlusBackgroundHighlight);
 }
 .btn-github {
-  .button-variant(@btnTextAlt; @btnGithubBackground; @btnGithubBackgroundHighlight);
+    .button-variant(@btnTextAlt; @btnGithubBackground; @btnGithubBackgroundHighlight);
 }
 
-
-.padding-top {
-    padding-top: 150px;
+.login {
+    margin-top: 200px;
+    margin-bottom: 200px;
 }
