fix: add class in public.less

--- a/client/app/main/public.less
+++ b/client/app/main/public.less
@@ -1,31 +1,32 @@
+.public {
+    h1 {
+	font-family: 'Open Sans', sans-serif;
 
-h1 {
-    font-family: 'Open Sans', sans-serif;
-
-    .bottom {
-	margin-bottom: 5px;
+	.bottom {
+	    margin-bottom: 5px;
+	}
     }
-}
 
-p {
-    font-family: 'Ubuntu', sans-serif;
-}
+    p {
+	font-family: 'Ubuntu', sans-serif;
+    }
 
-img{
-    height: 180px;
-    width: 180px;
+    img.semantic, img.shirt{
+	height: 180px;
+	width: 180px;
 
-}
+    }
 
-section {
-    margin-top: 20px;
-}
+    section {
+	margin-top: 20px;
+    }
 
-.semantic {
-    margin-top: 20px;
-}
+    .semantic {
+	margin-top: 20px;
+    }
 
-.shirt {
-    margin-top: 30px;
-    // margin-left: 70px;
+    .shirt {
+	margin-top: 30px;
+	// margin-left: 70px;
+    }
 }
