--- a/server/views/500.html
+++ b/server/views/500.html
@@ -145,8 +145,8 @@
       <p>Sorry, Our service is down</p>
       <p>It looks like this was the result of either:</p>
       <ul>
-        <li>Admin is traveling to andromeda galaxy</li>
-        <li>Wating for pizza</li>
+        <li>Admin is traveling to andromeda</li>
+        <li>or wating for cheese pizza</li>
       </ul>
       <!-- <script>
         var GOOG_FIXURL_LANG = (navigator.language || '').slice(0,2),GOOG_FIXURL_SITE = location.host;
