change language page button css color

--- a/client/app/language/language.less
+++ b/client/app/language/language.less
@@ -4,7 +4,7 @@
 
     .rank-tile, .user-tile, .repo-tile {
     	// background-color: @rebot-lightgray; //
-	background-color: #FFA000;
+	background-color: @rebot-lightgray;
     }
 
     .rank-count, .user-count, .repo-count {
@@ -28,7 +28,7 @@
 
     .search-bar {
 	// background-color: @rebot-blue;
-	background-color: #3D5AFE; 
+	background-color: #1B94B3; 
 
 	.lang-select {
 	    margin: 20px 20px 0px 0px;
@@ -120,17 +120,18 @@
 		}
 	    }
 
-	    .start-button {
-		background-color: @rebot-pink;
+	    .star-button {
+		// background-color: @rebot-pink;
+		background-color: #FDAA42;
 		&:not([disabled]):hover, &:not([disabled]):focus {
-		    background-color: @rebot-darkgreen;
+		    background-color: #DA9A42;
 		}
 	    }
 
 	    .fork-button {
-		background-color: @rebot-darkyellow;
+		background-color: #73BFFF;
 		&:not([disabled]):hover, &:not([disabled]):focus {
-		    background-color: @rebot-yellow;
+		    background-color: #239FFF;
 		}
 	    }
 	}
